--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <header>this is new header</header>
   <main>this is main</main>
+  <section>this is section</section>
   <footer>this is footer</footer>
 </body>
 
