feat: add new from develop

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <section>this is section</section>
   <footer>this is footer</footer>
   <div>develop</div>
+  <div>new from develop</div>
 </body>
 
 </html>
