--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <footer>this is footer</footer>
   <div>develop</div>
   <div>new from develop</div>
+  <div>one more new</div>
 </body>
 
 </html>
