feat: add empty

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <span>inside footer header</span>
+    <span>empty</span>
     this is new header
   </header>
   <main>this is main</main>
